// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðəː gɪg siːz ðəː wʊdf",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðəː dʌːgʂ siː ðəː wʊdfʂ",
    },
    {
      "english": "i give you the bread",
      "target": "aː æsgɪ̃ŋ wʊ",
    },
    {
      "english": "the king walks at the river",
      "target": "ðəː gɪg wʌːgɪ̃ŋz æt ðəː rɪvəːr",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðəː gɪg nɛt siːz ðəː wʊdf",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "debe vydedeh dupuom",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kaːde vydedent dupuom",
    },
    {
      "english": "i give you the bread",
      "target": "etɛ doːbaːdeo duom",
    },
    {
      "english": "the king walks at the river",
      "target": "debe aːmbudaːdeh fdume",
    },
    {
      "english": "the king does not see the wolf",
      "target": "debe doː vydedeh dupuom",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "heːla nɯfan hūleːna",
    },
    {
      "english": "the dogs see the wolves",
      "target": "hūhūleːna nɯfan hūhūleːna",
    },
    {
      "english": "i give you the bread",
      "target": "ma fānā sĩna",
    },
    {
      "english": "the king walks at the river",
      "target": "heːla fālā hāte feːnū",
    },
    {
      "english": "the king does not see the wolf",
      "target": "heːla ānā nɯfan hūleːna",
    },
  ],
  "preset": "tokipona",
}
`;
